kinotic-sql/src/main/antlr/KinoticSQL.g4
grammar KinoticSQL;

migrations
    : statement* EOF
    ;

statement
    : createTableStatement
    | createDataStreamStatement
    | createComponentTemplateStatement
    | createIndexTemplateStatement
    | alterTableStatement
    | reindexStatement
    | updateStatement
    | deleteStatement
    | insertStatement
    | selectStatement
    | comment
    ;

createTableStatement
    : CREATE TABLE (IF NOT EXISTS)? ID LPAREN columnDefinition (COMMA columnDefinition)* RPAREN SEMICOLON
    ;

createDataStreamStatement
    : CREATE DATA STREAM ID LPAREN columnDefinition (COMMA columnDefinition)* RPAREN (WITH LPAREN dataStreamOption (COMMA dataStreamOption)* RPAREN)? SEMICOLON
    ;

dataStreamOption
    : DATA_RETENTION ASSIGN STRING
    | TIME_REFERENCE ASSIGN STRING
    ;

createComponentTemplateStatement
    : CREATE COMPONENT TEMPLATE ID LPAREN templatePart (COMMA templatePart)* RPAREN SEMICOLON
    ;

createIndexTemplateStatement
    : CREATE INDEX TEMPLATE ID FOR STRING USING STRING (WITH LPAREN templatePart (COMMA templatePart)* RPAREN)? SEMICOLON
    ;

templatePart
    : NUMBER_OF_SHARDS ASSIGN INTEGER_LITERAL
    | NUMBER_OF_REPLICAS ASSIGN INTEGER_LITERAL
    | columnDefinition
    ;

alterTableStatement
    : ALTER TABLE ID ADD COLUMN ID type SEMICOLON
    ;

reindexStatement
    : REINDEX ID INTO ID reindexOptions? SEMICOLON
    ;

reindexOptions
    : WITH LPAREN reindexOption (COMMA reindexOption)* RPAREN
    ;

reindexOption
    : CONFLICTS ASSIGN (ABORT | PROCEED)
    | MAX_DOCS ASSIGN INTEGER_LITERAL
    | SLICES ASSIGN (AUTO | INTEGER_LITERAL)
    | SIZE ASSIGN INTEGER_LITERAL
    | SOURCE_FIELDS ASSIGN STRING
    | QUERY ASSIGN STRING
    | SCRIPT ASSIGN STRING
    | WAIT ASSIGN (TRUE | FALSE)
    | SKIP_IF_NO_SOURCE ASSIGN (TRUE | FALSE)
    ;

updateStatement
    : UPDATE ID SET assignment (COMMA assignment)* WHERE whereClause (WITH REFRESH)? SEMICOLON
    ;

deleteStatement
    : DELETE FROM ID WHERE whereClause (WITH REFRESH)? SEMICOLON
    ;

insertStatement
    : INSERT INTO tableName (LPAREN columnName (COMMA columnName)* RPAREN)? VALUES LPAREN valueList RPAREN (WITH insertOption (COMMA insertOption)*)? SEMICOLON
    ;

selectStatement
    : SELECT selectList FROM ID (WHERE whereClause)? (GROUP BY selectExpression (COMMA selectExpression)*)?
      (ORDER BY orderBy (COMMA orderBy)*)? (LIMIT INTEGER_LITERAL)? SEMICOLON
    ;

selectList
    : MULTIPLY
    | selectItem (COMMA selectItem)*
    ;

selectItem
    : selectExpression (AS ID)?
    ;

// A field or a function call; a statement whose SELECT list or GROUP BY calls a function is an aggregate
selectExpression
    : functionCall
    | fieldPath
    ;

functionCall
    : ID LPAREN (MULTIPLY | functionArgument (COMMA functionArgument)*)? RPAREN
    ;

functionArgument
    : selectExpression
    | STRING
    | numberLiteral
    | namedParameter
    ;

orderBy
    : fieldPath (ASC | DESC)?
    ;

// A field, or a sub-field of an object field joined by dots
fieldPath
    : ID (DOT ID)*
    ;

insertOption
    : REFRESH
    | ROUTING STRING
    | DOCUMENT_ID STRING
    ;

valueList
    : value (COMMA value)*
    ;

value
    : STRING
    | numberLiteral
    | BOOLEAN_LITERAL
    | NULL_LITERAL
    | namedParameter
    | objectLiteral
    | arrayLiteral
    ;

// Two tokens rather than one ':name' lexer rule, which would swallow the colon of an object field
// whose value starts a word: '{ street:null }' lexes as ID COLON NULL_LITERAL either way
namedParameter
    : COLON ID
    ;

// JSON style literals that populate OBJECT/NESTED/UNION columns: an object literal is one
// sub-document, an array literal a list of them. Both nest to any depth.
objectLiteral
    : LBRACE (objectField (COMMA objectField)*)? RBRACE
    ;

objectField
    : (ID | STRING) COLON value
    ;

arrayLiteral
    : LBRACKET (value (COMMA value)*)? RBRACKET
    ;

numberLiteral
    : MINUS? (INTEGER_LITERAL | DECIMAL_LITERAL)
    ;

assignment
    : ID ASSIGN expression
    ;

expression
    : value
    | ID operator expression  // e.g., age + 1
    | LPAREN expression RPAREN
    ;

operator
    : PLUS
    | MINUS
    | MULTIPLY
    | DIVIDE
    ;

whereClause
    : condition
    | LPAREN whereClause RPAREN
    | whereClause AND whereClause
    | whereClause OR whereClause
    ;

condition
    : fieldPath comparisonOperator (namedParameter | STRING | numberLiteral | BOOLEAN_LITERAL)
    ;

// '=' compares here and assigns in SET and WITH options; a comparison only appears in WHERE
comparisonOperator
    : ASSIGN
    | NOT_EQUALS
    | LESS_THAN
    | GREATER_THAN
    | LESS_THAN_EQUALS
    | GREATER_THAN_EQUALS
    ;

tableName
    : ID
    ;
    
columnName
    : ID
    ;

columnDefinition
    : ID type
    ;

unionVariant
    : ID LPAREN columnDefinition (COMMA columnDefinition)* RPAREN
    ;

type
    : TEXT
    | KEYWORD (NOT INDEXED)?
    | INTEGER (NOT INDEXED)?
    | LONG (NOT INDEXED)?
    | FLOAT (NOT INDEXED)?
    | DOUBLE (NOT INDEXED)?
    | BOOLEAN (NOT INDEXED)?
    | DATE (NOT INDEXED)?
    | JSON (NOT INDEXED)?
    | BINARY
    | GEO_POINT
    | GEO_SHAPE
    | UUID (NOT INDEXED)?
    | DECIMAL (NOT INDEXED)?
    | OBJECT LPAREN columnDefinition (COMMA columnDefinition)* RPAREN (NOT INDEXED)?
    | NESTED LPAREN columnDefinition (COMMA columnDefinition)* RPAREN
    | UNION  LPAREN unionVariant   (COMMA unionVariant)*   RPAREN (NOT INDEXED)?
    ;

comment
    : COMMENT
    ;

// SQL Keywords
ABORT: 'ABORT';
ADD: 'ADD';
ALTER: 'ALTER';
AND: 'AND';
AS: 'AS';
ASC: 'ASC';
AUTO: 'AUTO';
BY: 'BY';
COLUMN: 'COLUMN';
COMPONENT: 'COMPONENT';
CONFLICTS: 'CONFLICTS';
CREATE: 'CREATE';
DATA: 'DATA';
DATA_RETENTION: 'DATA_RETENTION';
DATE: 'DATE';
DELETE: 'DELETE';
DESC: 'DESC';
DOCUMENT_ID: 'DOCUMENT_ID';
DOUBLE: 'DOUBLE';
EXISTS: 'EXISTS';
FLOAT: 'FLOAT';
FOR: 'FOR';
FROM: 'FROM';
GROUP: 'GROUP';
IF: 'IF';
INDEX: 'INDEX';
INDEXED: 'INDEXED';
INSERT: 'INSERT';
INTO: 'INTO';
LIMIT: 'LIMIT';
LONG: 'LONG';
MAX_DOCS: 'MAX_DOCS';
NOT: 'NOT';
NUMBER_OF_REPLICAS: 'NUMBER_OF_REPLICAS';
NUMBER_OF_SHARDS: 'NUMBER_OF_SHARDS';
OR: 'OR';
ORDER: 'ORDER';
PROCEED: 'PROCEED';
QUERY: 'QUERY';
REFRESH: 'REFRESH';
REINDEX: 'REINDEX';
ROUTING: 'ROUTING';
SCRIPT: 'SCRIPT';
SELECT: 'SELECT';
SET: 'SET';
SIZE: 'SIZE';
SLICES: 'SLICES';
SOURCE_FIELDS: 'SOURCE_FIELDS';
STREAM: 'STREAM';
TABLE: 'TABLE';
TEMPLATE: 'TEMPLATE';
TIME_REFERENCE: 'TIME_REFERENCE';
UPDATE: 'UPDATE';
USING: 'USING';
VALUES: 'VALUES';
WHERE: 'WHERE';
WITH: 'WITH';
WAIT: 'WAIT';
TRUE: 'TRUE';
FALSE: 'FALSE';
SKIP_IF_NO_SOURCE: 'SKIP_IF_NO_SOURCE';

// Type Keywords
BOOLEAN: 'BOOLEAN';
INTEGER: 'INTEGER';
KEYWORD: 'KEYWORD';
NESTED: 'NESTED';
OBJECT: 'OBJECT';
TEXT: 'TEXT';
JSON: 'JSON';
BINARY: 'BINARY';
GEO_POINT: 'GEO_POINT';
GEO_SHAPE: 'GEO_SHAPE';
UUID: 'UUID';
DECIMAL: 'DECIMAL';
UNION: 'UNION';

// Punctuation and Operators
ASSIGN: '=';
COLON: ':';
COMMA: ',';
DIVIDE: '/';
DOT: '.';
GREATER_THAN: '>';
GREATER_THAN_EQUALS: '>=';
LBRACE: '{';
LBRACKET: '[';
LESS_THAN: '<';
LESS_THAN_EQUALS: '<=';
LPAREN: '(';
MINUS: '-';
MULTIPLY: '*';
NOT_EQUALS: '!=';
PLUS: '+';
RBRACE: '}';
RBRACKET: ']';
RPAREN: ')';
SEMICOLON: ';';

// Literals and Identifiers
BOOLEAN_LITERAL: 'true' | 'false';
DECIMAL_LITERAL: [0-9]+ '.' [0-9]+;
// Word literals are declared before ID because a match of equal length goes to whichever rule comes first
NULL_LITERAL: 'null';
ID: [a-zA-Z_][a-zA-Z_0-9]*;
INTEGER_LITERAL: [0-9]+;
STRING: '\'' ~[']* '\'';

// Skip Tokens
COMMENT: '--' ~[\r\n]* -> skip;
WS: [ \t\r\n]+ -> skip;
